--- a/ECommerce/ECommerce.WEB/assets/css/slick-theme.css
+++ b/ECommerce/ECommerce.WEB/assets/css/slick-theme.css
@@ -1,16 +1,20 @@
-@charset "UTF-8";
+﻿@charset "UTF-8";
 /* Slider */
 .slick-loading .slick-list {
   background: #fff url("../images/ajax-loader.gif") center center no-repeat; }
 
 /* Icons */
 @font-face {
-  font-family: "slick";
-  src: url("http://themes.pixelstrap.com/bigboost/assets/fonts/slick.eot");
-  src: url("http://themes.pixelstrap.com/bigboost/assets/fonts/slick.eot?#iefix") format("embedded-opentype"), url("http://themes.pixelstrap.com/bigboost/assets/fonts/slick.woff") format("woff"), url("http://themes.pixelstrap.com/bigboost/assets/fonts/slick.ttf") format("truetype"), url("http://themes.pixelstrap.com/bigboost/assets/fonts/slick.svg#slick") format("svg");
-  font-weight: normal;
-  font-style: normal; }
-
+    font-family: "slick";
+    src: url('slick/slick.eot');
+    src: url("slick/slick.eot?#iefix") format("embedded-opentype"), url('slick/slick.woff') format("woff"), src: url('slick/slick.ttf') format("truetype"), url('slick/slick.svg#slick') format("svg");
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'slick';
+    src: url('slick/slick.svg#slick') format('svg');
+}
 /* Arrows */
 .slick-prev,
 .slick-next {
