--- a/ECommerce/ECommerce.WEB/assets/css/themify-icons.css
+++ b/ECommerce/ECommerce.WEB/assets/css/themify-icons.css
@@ -1,14 +1,11 @@
 @font-face {
 	font-family: 'themify';
-	src:url('http://themes.pixelstrap.com/bigboost/assets/fonts/themify.eot?-fvbane');
-	src:url('http://themes.pixelstrap.com/bigboost/assets/fonts/themify.eot?#iefix-fvbane') format('embedded-opentype'),
-		url('http://themes.pixelstrap.com/bigboost/assets/fonts/themify.woff?-fvbane') format('woff'),
-		url('http://themes.pixelstrap.com/bigboost/assets/fonts/themify.ttf?-fvbane') format('truetype'),
-		url('http://themes.pixelstrap.com/bigboost/assets/fonts/themify.svg?-fvbane#themify') format('svg');
+	src: url('themify/themify.eot?-fvbane');
+	src: url('themify/themify.eot?#iefix-fvbane') format('embedded-opentype'), url('themify/themify.woff?-fvbane') format('woff'), url('themify/themify.ttf?-fvbane') format('truetype'), url('themify/themify.svg?-fvbane#themify') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
-
+ 
 [class^="ti-"], [class*=" ti-"] {
 	font-family: 'themify';
 	speak: none;
