validation yapısı kontrol edildi ve düzenlendi.

--- a/ECommerce/ECommerce.WEB/Views/Home/Index.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Home/Index.cshtml
@@ -3,5 +3,8 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
-
+    <div class="form-group">
+        <div class="form-group">
+            <input type="text" class="form-control" />
+        </div>
+    </div>
