mail helper ayarları yapıldı ve test edildi çalıştırıldı.

--- a/ECommerce/ECommerce.WEB/Views/Home/Register.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Home/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model Ecommerce.WEB.Models.AppUserManagement.AppUserCRUDModel
+﻿@model ECommerce.WEB.Models.AppUserManagement.AppUserCRUDModel
 @{
     ViewData["Title"] = "Kayıt Ol";
 }
