json hatası çözüldü jsde düzenlemeler yapıldı ve sürekli açılan modal kodu kapatıldı.

--- a/ECommerce/ECommerce.WEB/Views/Shared/_Layout.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Shared/_Layout.cshtml
@@ -1071,7 +1071,7 @@
     </footer>
     <!-- footer section end -->
     <!--modal popup start-->
-    <div class="modal fade bd-example-modal-lg theme-modal newsletter-popup" id="exampleModal" tabindex="-1" role="dialog" aria-hidden="true">
+    @*<div class="modal fade bd-example-modal-lg theme-modal newsletter-popup" id="exampleModal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-body">
@@ -1097,7 +1097,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>*@
     <!--modal popup end-->
     <!-- Add to cart bar -->
     <div id="cart_side" class="add_to_cart right">
