--- a/ECommerce/ECommerce.WEB/Views/Home/Register.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Home/Register.cshtml
@@ -10,7 +10,7 @@
             <div class="col-lg-12">
                 <h3 class="title pt-0">create account</h3>
                 <div class="theme-card">
-                    @using (Html.BeginForm("Register","Home",new {@class="theme-form form-group", @id="RegisterForm" }))
+                    @using (Html.BeginForm("Register","Home",FormMethod.Post,new {@class="theme-form form-group", @id="RegisterForm" }))
                     {
                         <div class="form-row">
                             <div class="col-md-6">
