--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -580,6 +580,15 @@
     <!-- others plugins -->
     <script src="~/Themes/AdminAssets/js/plugins.js"></script>
     <script src="~/Themes/AdminAssets/js/scripts.js"></script>
+
+    <script src="~/Content/lib/swal/sweetalert2.js"></script>
+    <script src="~/Content/js/EcommerceCustom.js"></script>
+    <script src="~/Content/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/Content/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+
+
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.2/js/bootstrapValidator.min.js"></script>
+    @RenderSection("Scripts", required: false)
 </body>
 
 </html>
