--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -22,6 +22,9 @@
     <link rel="stylesheet" href="~/Themes/AdminAssets/css/responsive.css">
     <!-- modernizr css -->
     <script src="~/Themes/AdminAssets/js/vendor/modernizr-2.8.3.min.js"></script>
+    <link href="~/Content/lib/swal/sweetalert2.css" rel="stylesheet" />
+
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.2/css/bootstrapValidator.min.css" />
 </head>
 
 <body>
