--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -1,4 +1,4 @@
-﻿!doctype html>
+﻿<!doctype html>
 <html class="no-js" lang="en">
 
 <head>
@@ -13,6 +13,11 @@
     <link rel="stylesheet" href="~/Themes/AdminAssets/css/metisMenu.css">
     <link rel="stylesheet" href="~/Themes/AdminAssets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="~/Themes/AdminAssets/css/slicknav.min.css">
+    <!-- Start datatable css -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.18/css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.jqueryui.min.css">
     <!-- amchart css -->
     <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
     <!-- others css -->
@@ -50,121 +55,75 @@
                     <nav>
                         <ul class="metismenu" id="menu">
                             <li>
-                                <a href="javascript:void(0)" aria-expanded="true"><i class="ti-dashboard"></i><span>dashboard</span></a>
-                                <ul class="collapse">
-                                    <li><a href="index.html">ICO dashboard</a></li>
-                                    <li><a href="index2.html">Ecommerce dashboard</a></li>
-                                    <li><a href="index3.html">SEO dashboard</a></li>
-                                </ul>
-                            </li>
-                            <li>
                                 <a href="javascript:void(0)" aria-expanded="true">
                                     <i class="ti-layout-sidebar-left"></i><span>
-                                        Sidebar
-                                        Types
+                                        Slider Yönetimi
                                     </span>
                                 </a>
                                 <ul class="collapse">
-                                    <li><a href="index.html">Left Sidebar</a></li>
-                                    <li><a href="index3-horizontalmenu.html">Horizontal Sidebar</a></li>
+                                    <li><a href="index3-horizontalmenu.html">Slider</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="javascript:void(0)" aria-expanded="true"><i class="ti-pie-chart"></i><span>Charts</span></a>
+                                <a href="javascript:void(0)" aria-expanded="true"><i class="ti-pie-chart"></i><span>Ürün Yönetimi</span></a>
                                 <ul class="collapse">
-                                    <li><a href="barchart.html">bar chart</a></li>
-                                    <li><a href="linechart.html">line Chart</a></li>
-                                    <li><a href="piechart.html">pie chart</a></li>
-                                </ul>
-                            </li>
-                            <li class="active">
-                                <a href="javascript:void(0)" aria-expanded="true"><i class="ti-palette"></i><span>UI Features</span></a>
-                                <ul class="collapse">
-                                    <li><a href="accordion.html">Accordion</a></li>
-                                    <li><a href="alert.html">Alert</a></li>
-                                    <li><a href="badge.html">Badge</a></li>
-                                    <li><a href="button.html">Button</a></li>
-                                    <li><a href="button-group.html">Button Group</a></li>
-                                    <li><a href="cards.html">Cards</a></li>
-                                    <li><a href="dropdown.html">Dropdown</a></li>
-                                    <li><a href="list-group.html">List Group</a></li>
-                                    <li><a href="media-object.html">Media Object</a></li>
-                                    <li><a href="modal.html">Modal</a></li>
-                                    <li class="active"><a href="pagination.html">Pagination</a></li>
-                                    <li><a href="popovers.html">Popover</a></li>
-                                    <li><a href="progressbar.html">Progressbar</a></li>
-                                    <li><a href="tab.html">Tab</a></li>
-                                    <li><a href="typography.html">Typography</a></li>
-                                    <li><a href="form.html">Form</a></li>
-                                    <li><a href="grid.html">grid system</a></li>
+                                    <li><a href="barchart.html">Ürün</a></li>
+                                    <li><a href="login.html">Ürün Özelliği</a></li>
+                                    <li><a href="login.html">Ürün Sipariş Seçenekleri</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="javascript:void(0)" aria-expanded="true"><i class="ti-slice"></i><span>icons</span></a>
+                                <a href="javascript:void(0)" aria-expanded="true"><i class="ti-palette"></i><span>Kargo Yönetimi</span></a>
                                 <ul class="collapse">
-                                    <li><a href="fontawesome.html">fontawesome icons</a></li>
-                                    <li><a href="themify.html">themify icons</a></li>
+                                    <li><a href="accordion.html">Kargo</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0)" aria-expanded="true"><i class="ti-slice"></i><span>İndirim Kodu Yönetimi</span></a>
+                                <ul class="collapse">
+                                    <li><a href="fontawesome.html">İndirim Kodları</a></li>
+                                    <li><a href="themify.html">Kod Üret</a></li>
                                 </ul>
                             </li>
                             <li>
                                 <a href="javascript:void(0)" aria-expanded="true">
                                     <i class="fa fa-table"></i>
-                                    <span>Tables</span>
+                                    <span>Kategori Yönetimi</span>
                                 </a>
                                 <ul class="collapse">
-                                    <li><a href="table-basic.html">basic table</a></li>
-                                    <li><a href="table-layout.html">table layout</a></li>
-                                    <li><a href="datatable.html">datatable</a></li>
+                                    <li><a href="table-basic.html">Kategori</a></li>
                                 </ul>
                             </li>
-                            <li><a href="maps.html"><i class="ti-map-alt"></i> <span>maps</span></a></li>
-                            <li><a href="invoice.html"><i class="ti-receipt"></i> <span>Invoice Summary</span></a></li>
                             <li>
-                                <a href="javascript:void(0)" aria-expanded="true"><i class="ti-layers-alt"></i> <span>Pages</span></a>
+                                <a href="javascript:void(0)" aria-expanded="true"><i class="ti-user"></i> <span>Kullanıcı Yönetimi</span></a>
                                 <ul class="collapse">
-                                    <li><a href="login.html">Login</a></li>
-                                    <li><a href="login2.html">Login 2</a></li>
-                                    <li><a href="login3.html">Login 3</a></li>
-                                    <li><a href="register.html">Register</a></li>
-                                    <li><a href="register2.html">Register 2</a></li>
-                                    <li><a href="register3.html">Register 3</a></li>
-                                    <li><a href="register4.html">Register 4</a></li>
-                                    <li><a href="screenlock.html">Lock Screen</a></li>
-                                    <li><a href="screenlock2.html">Lock Screen 2</a></li>
-                                    <li><a href="reset-pass.html">reset password</a></li>
-                                    <li><a href="pricing.html">Pricing</a></li>
+                                    <li><a href="login2.html">Onay Bekleyen Kullanıcılar</a></li>
+                                    <li><a href="login2.html">Onaylı Kullanıcılar</a></li>
+                                    <li><a href="login2.html">Silinen Kullanıcılar</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0)" aria-expanded="true"><i class="ti-settings"></i> <span>Ayarlar</span></a>
+                                <ul class="collapse">
+                                    <li><a href="login2.html">Firma Ayarları</a></li>
+                                    <li><a href="@Url.Action("Index","AdminUser")">Admin Yönetimi</a></li>
                                 </ul>
                             </li>
                             <li>
                                 <a href="javascript:void(0)" aria-expanded="true">
                                     <i class="fa fa-exclamation-triangle"></i>
-                                    <span>Error</span>
+                                    <span>Yorum Yönetimi</span>
                                 </a>
                                 <ul class="collapse">
-                                    <li><a href="404.html">Error 404</a></li>
-                                    <li><a href="403.html">Error 403</a></li>
-                                    <li><a href="500.html">Error 500</a></li>
+                                    <li><a href="404.html">Onay Bekleyen Yorumlar</a></li>
+                                    <li><a href="403.html">Onaylanan Yorumlar</a></li>
+                                    <li><a href="500.html">Silinen Yorumlar</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="javascript:void(0)" aria-expanded="true">
-                                    <i class="fa fa-align-left"></i> <span>
-                                        Multi
-                                        level menu
-                                    </span>
-                                </a>
+                                <a href="javascript:void(0)" aria-expanded="true"><i class="ti-help"></i><span>Destek Yönetimi</span></a>
                                 <ul class="collapse">
-                                    <li><a href="#">Item level (1)</a></li>
-                                    <li><a href="#">Item level (1)</a></li>
-                                    <li>
-                                        <a href="#" aria-expanded="true">Item level (1)</a>
-                                        <ul class="collapse">
-                                            <li><a href="#">Item level (2)</a></li>
-                                            <li><a href="#">Item level (2)</a></li>
-                                            <li><a href="#">Item level (2)</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">Item level (1)</a></li>
+                                    <li><a href="fontawesome.html">Destek</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -355,23 +314,15 @@
                         </div>
                     </div>
                     <div class="col-sm-6 clearfix">
-                        <div class="user-profile pull-right">
-                            <img class="avatar user-thumb" src="~/Themes/AdminAssets/images/author/avatar.png" alt="avatar">
-                            <h4 class="user-name dropdown-toggle" data-toggle="dropdown">Kumkum Rai <i class="fa fa-angle-down"></i></h4>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Message</a>
-                                <a class="dropdown-item" href="#">Settings</a>
-                                <a class="dropdown-item" href="#">Log Out</a>
-                            </div>
-                        </div>
+                        @Html.Action("_AdminProfile", "Home")
                     </div>
                 </div>
             </div>
             <!-- page title area end -->
             <div class="main-content-inner">
-                <div class="row">
+               
                     @RenderBody()
-                </div>
+                
             </div>
         </div>
         <!-- main content area end -->
@@ -579,6 +530,14 @@
     <script src="~/Themes/AdminAssets/js/metisMenu.min.js"></script>
     <script src="~/Themes/AdminAssets/js/jquery.slimscroll.min.js"></script>
     <script src="~/Themes/AdminAssets/js/jquery.slicknav.min.js"></script>
+
+    <!-- Start datatable js -->
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
+    <script src="https://cdn.datatables.net/1.10.18/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.18/js/dataTables.bootstrap4.min.js"></script>
+    <script src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
+    <script src="https://cdn.datatables.net/responsive/2.2.3/js/responsive.bootstrap.min.js"></script>
+    <!-- Start datatable js -->
 
     <!-- others plugins -->
     <script src="~/Themes/AdminAssets/js/plugins.js"></script>
