--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -97,9 +97,7 @@
                             <li>
                                 <a href="javascript:void(0)" aria-expanded="true"><i class="ti-user"></i> <span>Kullanıcı Yönetimi</span></a>
                                 <ul class="collapse">
-                                    <li><a href="login2.html">Onay Bekleyen Kullanıcılar</a></li>
-                                    <li><a href="login2.html">Onaylı Kullanıcılar</a></li>
-                                    <li><a href="login2.html">Silinen Kullanıcılar</a></li>
+                                    <li><a href="@Url.Action("Index","AdminUser", new { area = "Admin" })" >Admin Kullanıcıları</a></li>                               
                                 </ul>
                             </li>
                             <li>
