--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/Slider/Update.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/Slider/Update.cshtml
@@ -13,25 +13,26 @@
             <div class="col-12 mt-5">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="header-title">Kargo Firması Ekle</h4>
+                        <h4 class="header-title">Slider Güncelleme</h4>
                         <div class="form-group">
+                           
                             @Html.LabelFor(s => s.Title, new { @class = "col-form-label" })
                             @Html.TextBoxFor(s => s.Title, new { @class = "form-control", required = "", placeholder = "İsim" })
                             @Html.ValidationMessageFor(s => s.Title)
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(s => s.ImagePath, new { @class = "col-form-label" })
-                            @Html.TextBoxFor(s => s.ImagePath, new { @class = "form-control", placeholder = "Resim", type = "file" })
+                            @Html.TextBoxFor(s => s.ImagePath, new { @class = "form-control",placeholder = "Resim", type = "file" })
                             @Html.ValidationMessageFor(s => s.ImagePath)
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(s => s.ExpiredDate, new { @class = "col-form-label" })
-                            @Html.TextBoxFor(s => s.ExpiredDate, new { @class = "form-control" , placeholder = "Bitiş Tarihi", type = "date" })
+                            @Html.TextBoxFor(s => s.ExpiredDate, new { @class = "form-control" , placeholder = "Bitiş Tarihi"  })
                             @Html.ValidationMessageFor(s => s.ExpiredDate)
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(s => s.CretaDate, new { @class = "col-form-label" })
-                            @Html.TextBoxFor(s => s.CretaDate, new { @class = "form-control", placeholder = "Başlangıç Tarihi", type = "datetime" })
+                            @Html.TextBoxFor(s => s.CretaDate, new { @class = "form-control",placeholder = "Başlangıç Tarihi" })
                             @Html.ValidationMessageFor(s => s.CretaDate)
                         </div>
                         <div class="form-group">
