Home sayfasına Slider eklendi.

--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -551,7 +551,7 @@
     <script>
 
         $('.datepicker').datepicker({
-            dateFormat: 'dd/mm/yy',
+            dateFormat: 'dd.mm.yy',
             lang: 'tr',
             timepicker: false,
             closeOnDateSelect: true,
