--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/Slider/Index.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/Slider/Index.cshtml
@@ -21,8 +21,8 @@
                                 <tr>
                                     <th scope="col">Başlık</th>
                                     <th scope="col">Resim</th>
-                                    <th scope="col">Bitiş Tarihi</th>
                                     <th scope="col">Başlangıç Tarihi</th>
+                                    <th scope="col">Bitiş Tarihi</th>
                                     <th scope="col">Url</th>
                                     <th scope="col">Düzenle</th>
                                     <th scope="col">Sil</th>
@@ -34,8 +34,15 @@
                                 <tr>
                                     <td>@slider.Title</td>
                                     <td> <img src="~/Uploads/SliderImage/@slider.ImagePath" height="100" width="100" alt="" class="img-responsive" /></td>
-                                    <td>@slider.ExpiredDate</td>
-                                    <td>@slider.CretaDate</td>
+                                    <td>@slider.CretaDate.ToShortDateString()</td>
+                                    @if (slider.ExpiredDate != null)
+                                    {
+                                        <td>@slider.ExpiredDate.Value.ToShortDateString()</td>
+                                    }
+                                    else
+                                    {
+                                        <td>-</td>
+                                    }
                                     <td>@slider.RedirectUrl</td>
                                     <td>
                                         <ul class="d-flex justify-content-center">
