--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/Slider/Insert.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/Slider/Insert.cshtml
@@ -6,42 +6,36 @@
 
 @using (Html.BeginForm("Insert", "Slider", FormMethod.Post, new { id = "InsertSlider", @enctype = "multipart/form-data" }))
 {
-
     <div class="col-lg-6 col-ml-12">
         <div class="row">
             <div class="col-12 mt-5">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="header-title">Slider Ekle</h4>
+                        <h4 class="header-title">Slider Ekleme</h4>
                         <div class="form-group">
+
                             @Html.LabelFor(s => s.Title, new { @class = "col-form-label" })
                             @Html.TextBoxFor(s => s.Title, new { @class = "form-control", required = "", placeholder = "İsim" })
                             @Html.ValidationMessageFor(s => s.Title)
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(s => s.ImagePath, new { @class = "col-form-label" })
-                            @Html.TextBoxFor(s => s.ImagePath, new { @class = "form-control", required = "", placeholder = "Resim", type = "file" })
+                            @Html.TextBoxFor(s => s.ImagePath, new { @class = "form-control", placeholder = "Resim", type = "file" })
                             @Html.ValidationMessageFor(s => s.ImagePath)
                         </div>
                         <div class="form-group">
-                            @Html.LabelFor(s => s.ExpiredDate, "{0:d}", new { @class = "col-form-label" })
-
-                            @*<input type="text" name="ExpiredDate" class="form-control datepicker" required />*@
-                            @Html.TextBoxFor(s=>s.ExpiredDate,new { @class = "form-control datepicker", })
-
+                            @Html.LabelFor(s => s.ExpiredDate, new { @class = "col-form-label" })
+                            @Html.TextBoxFor(s => s.ExpiredDate, "{0:d}", new { @class = "form-control datepicker", placeholder = "Bitiş Tarihi" })
                             @Html.ValidationMessageFor(s => s.ExpiredDate)
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(s => s.CretaDate, new { @class = "col-form-label" })
-
- 
-                            @Html.TextBoxFor(s=>s.CretaDate, "{0:d}", new { @class = "form-control datepicker", })
-
+                            @Html.TextBoxFor(s => s.CretaDate, "{0:d}", new { @class = "form-control datepicker", placeholder = "Başlangıç Tarihi" })
                             @Html.ValidationMessageFor(s => s.CretaDate)
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(s => s.RedirectUrl, new { @class = "col-form-label" })
-                            @Html.TextBoxFor(s => s.RedirectUrl, new { @class = "form-control", required = "", placeholder = "Url"})
+                            @Html.TextBoxFor(s => s.RedirectUrl, new { @class = "form-control", placeholder = "Url" })
                             @Html.ValidationMessageFor(s => s.RedirectUrl)
                         </div>
                         <div class="form-group">
@@ -57,7 +51,7 @@
 
 @section Scripts{
     <script>
-        Jform ("#InsertSlider");
+        Jform("#InsertSlider");
     </script>
 }
 
