Category Insert İşlemi Gerçeklendi Ve Prosedür Güncellendi.

--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -91,7 +91,7 @@
                                     <span>Kategori Yönetimi</span>
                                 </a>
                                 <ul class="collapse">
-                                    <li><a href="table-basic.html">Kategori</a></li>
+                                    <li><a href="@Url.Action("Index","Category")">Kategori</a></li>
                                 </ul>
                             </li>
                             <li>
