--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/Category/Insert.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/Category/Insert.cshtml
@@ -2,13 +2,18 @@
 @{
     ViewBag.Title = "Kategori Ekle";
 }
-
+ 
+ 
 
 @using (Html.BeginForm("Insert", "Category", FormMethod.Post, new { @id = "InsertCategory" }))
 {
+
+
+
     <div class="form-group">
+
         @Html.LabelFor(s => s.TopCategoryId, new { @class = "col-form-label" })
-        @Html.DropDownListFor(s => s.TopCategoryId, Model.TopCategoryList, "Seçiniz", new { @class = "custom-select" })
+        @Html.DropDownListFor(s => s.TopCategoryId, Model.TopCategoryList, string.Empty, new { @class = "form-control" })
         @Html.ValidationMessageFor(s => s.TopCategoryId)
     </div>
 
@@ -20,7 +25,7 @@
         @Html.ValidationMessageFor(s => s.CategoryName)
 
     </div>
-    
+
     <div class="form-group">
 
         <input type="submit" class="btn btn-success" />
@@ -30,7 +35,11 @@
 
 
 @section Scripts{
-    <script>
+     <script>
+
         Jform("#InsertCategory");
+
+
     </script>
+
 }
