sliderdaki date problemi çözüldü

--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -542,27 +542,19 @@
     <script src="~/Themes/AdminAssets/js/scripts.js"></script>
 
     <script src="~/Content/lib/swal/sweetalert2.js"></script>
-    <script src="~/Content/js/EcommerceCustom.js"></script>
     <script src="~/Content/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/Content/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
     <script src="~/Scripts/jquery-ui-1.12.1.js"></script>
 
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.2/js/bootstrapValidator.min.js"></script>
 
-     <script src="https://selectize.github.io/selectize.js/js/selectize.js"></script>
+    <script src="https://selectize.github.io/selectize.js/js/selectize.js"></script>
+    <script src="https://momentjs.com/downloads/moment.js"></script>
     <script>
 
-        $('.datepicker').datepicker({
-            dateFormat: 'dd.mm.yy',
-            lang: 'tr',
-            timepicker: false,
-            closeOnDateSelect: true,
-
-        });
-        $(function () {
-            $('select').selectize();
-        });
+ 
     </script>
+    <script src="~/Content/js/EcommerceCustom.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 
