Parametre yapısı kurgulanmaya başladı ve ana layouta datepicker kurulumları yapıldı.

--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -552,7 +552,10 @@
     <script src="https://momentjs.com/downloads/moment.js"></script>
     <script>
 
- 
+        $(function () {
+            $('select').selectize();
+        });
+
     </script>
     <script src="~/Content/js/EcommerceCustom.js"></script>
     @RenderSection("Scripts", required: false)
