Layotua MomentJs eklendi ve parametre crud işlemlerinde çalışıldı.

--- a/ECommerce/ECommerce.WEB/Views/Shared/_Layout.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Shared/_Layout.cshtml
@@ -1924,6 +1924,7 @@
     <script src="~/Content/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/Content/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
     <script src="~/Scripts/jquery-ui-1.12.1.js"></script>
+    <script src="https://momentjs.com/downloads/moment.js"></script>
     <script src="~/Content/js/EcommerceCustom.js"></script>
 
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.2/js/bootstrapValidator.min.js"></script>
