--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -120,6 +120,15 @@
                                 </ul>
                             </li>
                             <li>
+                                <a href="javascript:void(0)" aria-expanded="true">
+                                    <i class="fa fa-exclamation-triangle"></i>
+                                    <span>Parametre Yönetimi</span>
+                                </a>
+                                <ul class="collapse">
+                                    <li><a href="@Url.Action("ProductPropertyList","Parameter")">Ürün Özellikleri</a></li>
+                                </ul>
+                            </li>
+                            <li>
                                 <a href="javascript:void(0)" aria-expanded="true"><i class="ti-help"></i><span>Destek Yönetimi</span></a>
                                 <ul class="collapse">
                                     <li><a href="fontawesome.html">Destek</a></li>
